# month.erdmko.de

./: .gitignore  CHAT_MVP_PLAN.md  Dockerfile  MODULE.bazel  README.md  TODO.md  ecosystem.config.cjs  run-server.sh
ansible/: push.yaml
assets/: BUILD.bazel
assets/css/: style.scss
assets/js/: BUILD.bazel  chat-effect.ts  tsconfig.test.json
assets/js/chat/: index.ts  protocol.test.ts  protocol.ts  template.ts
assets/js/utils/: dom.ts
contracts/chat/: CHAT_CONTRACT.md
server/: BUILD.bazel
server/src/: chat.rs  db.rs  main.rs
server/src/chat/: db.rs  error.rs  mod.rs  service.rs
server/src/pages/: chat.rs  main_page.rs  mod.rs
server/templates/: chat.html
tickets/chat-mvp/: BAZEL_TEST_RUNBOOK.md  CHAT-00-foundation.md  CHAT-10-contract-freeze.md  CHAT-20-data-layer.md  CHAT-30-ws-room-hub.md  CHAT-40-chat-page-ui.md  CHAT-50-main-page-integration.md  CHAT-60-stability-security.md  CHAT-70-qa-release.md  README.md
