load("@crate_index//:defs.bzl", "all_crate_deps", "aliases")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load("//:variables.bzl", "api_token")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "server",
    srcs = glob(["src/**/*.rs"]),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = {
        'BAZEL_STATIC': 'server',
        'DOMAIN': 'erdmko.dev',
        'API_TOKEN': api_token
    },
    deps = all_crate_deps(normal = True),
    data = [
        '//server/db',
        '//server/templates',
        '//assets/js:tennis-bundle',
        '//assets/js:tetris-bundle',
        '//assets/js:snowflake-bundle',
        '//assets/js:month-bundle',
        '//assets/js:chat-bundle',
        '//assets/js:metrika',
        '//assets/css',
        '//assets/img',
        '//assets:assets',
    ]
)

rust_test(
    name = "chat_db_test",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True),
)
